Fix emojis, fix settings icons not showing, added library icons

--- a/src/fluenticons-context.css
+++ b/src/fluenticons-context.css
@@ -356,12 +356,33 @@
 #guild-entry-context-devmode-copy-id::before,
 #dev-context-devmode-copy-id::before,
 #guild-integrations-permission-role-context-devmode-copy-id::before,
-#guild-discovery-context-menu-devmode-copy-id::before {
+#guild-discovery-context-menu-devmode-copy-id::before,
+#game-context-application-dev::before {
 	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/copy.svg') !important;
 }
 
 .icon-E4cW1l [d='M5 2C3.34315 2 2 3.34315 2 5V19C2 20.6569 3.34315 22 5 22H19C20.6569 22 22 20.6569 22 19V5C22 3.34315 20.6569 2 19 2H5ZM8.79741 7.72V16H6.74541V7.72H8.79741ZM13.2097 7.72C16.0897 7.72 17.5897 9.388 17.5897 11.848C17.5897 14.308 16.0537 16 13.2577 16H10.3537V7.72H13.2097ZM13.1497 14.404C14.6137 14.404 15.5257 13.636 15.5257 11.86C15.5257 10.12 14.5537 9.316 13.1497 9.316H12.4057V14.404H13.1497Z'] {
 	display: none;
+}
+
+/* Game Library Actions */
+#game-context-install::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/arrow_download.svg') !important;
+}
+#game-context-uninstall::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/uninstall_app.svg') !important;
+}
+#game-context-private::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/calendar_agenda.svg') !important;
+}
+#game-context-on-overlay::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/picture_in_picture.svg') !important;
+}
+#game-context-in-library::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/eye_off.svg') !important;
+}
+#game-context-create-shortcut::before {
+	--icon: url('https://stickfab.github.io/pc-fluenticons/assets/24/desktop_arrow_right.svg') !important;
 }
 
 /* User (Actions) */
